# internal/models/sight.go
@@ -29,3 +29,11 @@ type Tag struct {
 	Id   int    `json:"id"`
 	Name string `json:"name"`
 }
+
+type SearchSights struct {
+	Tags      []int64  `json:"tags"`
+	Countries []string `json:"countries"`
+	Skip      int      `json:"skip"`
+	Limit     int      `json:"limit"`
+	Search    string   `json:"search"`
+}
