# internal/services/sight/models/models.go
@@ -16,3 +16,10 @@ type Tag struct {
 	Id   int
 	Name string
 }
+
+type SightsSearch struct {
+	Skip, Limit int
+	Search      string
+	Tags        []int64
+	Countries   []string
+}
